# eos-local

./: .all-contributorsrc  .editorconfig  .env.example  .gitignore  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  config.ini  contributing.md  docker-compose.yml  genesis.json  getting-started-with-eos.md  gulpfile.js  license  makefile  package-lock.json  package.json  readme.md  start.sh
.github/workflows/: publish-docker-image.yaml
contracts/eoslocal/include/: eoslocal_greet.hpp
contracts/hello/: hello.cpp
docs/: README.md
scripts/: cleos.sh  ditch-wallet.sh  flush.sh  fresh.sh  setup.sh  start.sh  stop.sh  unlock.sh
services/demux/: Dockerfile  package.json  pm2.config.js  readme.md  start.sh
services/demux/src/: effects.ts  index.ts  updaters.ts
services/eos-api-node/: config.ini  start.sh
services/eos-dev/: Dockerfile  start.sh
services/eos-dev/config/: config.ini
services/eos-dev/contracts/: CMakeLists.txt  build.sh
services/eos-dev/contracts/eosdapp/: CMakeLists.txt
services/eos-dev/contracts/eosdapp/src/: eosdapp.cpp
services/eos-dev/scripts/: 0000_init-chain.sh  init_wallet.sh
services/eos-fullnode/: Dockerfile  config.ini
services/eos-node/: config-main-node.ini  config.ini  start.sh
services/eos-producer/: start.sh
services/eos-producer/contracts/: .gitignore  build.sh
services/eosio/: Dockerfile  start.sh
services/eosio/config/: config.ini
services/frontend/: .env  .eslintrc  .gitignore  config-overrides.js  package.json  readme.md
services/hasura/: config.yaml
services/ipfs/: config
(+82 files in other folders)
